Controllers: Added offset and limit to query
